# dc-ai-dul

./: README.md  README.md.bak  pyproject.toml  requirements.txt  run_all.sh
data/sample/: generic_sample.csv
docs/: ARCHITECTURE.md  CONNECTOR_SPEC.md  DB_SCHEMA.sql  DEPLOYMENT_GUIDE.md  DUL_MODEL_THEORY.md  FEATURE_ENGINEERING.md  ML_PIPELINE.md  OCP_TELEMETRY.md  SCHEMA.md  SENSORS.md
docs/sql/views/: view_asset_health.sql  view_latest_dul_per_component.sql  view_replacement_forecast.sql
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts
frontend/src/components/: DocsTab.tsx  FleetTab.tsx  Layout.tsx  OverviewTab.tsx  SettingsTab.tsx
grafana/dashboards/: component_insights.json  fleet_overview.json  replacement_forecast.json
models/: lstm_dul.pt  model_meta.json
src/ai_dc_dul/: __init__.py  telemetry_schema.py
src/ai_dc_dul/api/: __init__.py  schemas.py  server.py  services.py
src/ai_dc_dul/cli/: __init__.py  run_pipeline.py
src/ai_dc_dul/connectors/: __init__.py  modbus_connector.py  prometheus_connector.py  snmp_connector.py
src/ai_dc_dul/features/: __init__.py  feature_builder.py
src/ai_dc_dul/ingestion/: __init__.py  generic_csv_ingestor.py  ocp_redfish_ingestor.py
src/ai_dc_dul/models/: __init__.py  anomaly_model.py  dul_model.py  sequence_dul_model.py  survival_dul_model.py
src/dc_ai_dul.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: dashboard.html
tests/: test_import.py  test_import_version.py  test_version_05.py
(+2 files in other folders)
