[project]
name = "dc-ai-dul"
version = "1.2.0"
description = "Data Center Depreciation Useful Life AI/ML"
requires-python = ">=3.9"
authors = [
  { name="Birdy Cho", email="you@example.com" }
]

dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "pyyaml>=6.0",
  "torch>=2.0",
  "lifelines>=0.27",
  "requests>=2.31",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
